--- a/README.Rmd
+++ b/README.Rmd
@@ -92,21 +92,21 @@ Data is imported from several tables within two PDF documents by taking screensh
 
 #### Data wrangling 
 
-This case study particularly focuses on renaming variables, modifying variables, creating new variables, and modifying the shape of the data using fuctions such as as: `pivot_longer()`, and `pivot_wider()`,  as well as modifying specific variables using the `mutate()` and `across()` functions of the `dplyr` package.  
+This case study particularly focuses on renaming variables, modifying variables, creating new variables, and modifying the shape of the data using functions such as as: `pivot_longer()`, and `pivot_wider()`,  as well as modifying specific variables using the `mutate()` and `across()` functions of the `dplyr` package.  
 This case study also covers combining data with `bind_rows()` and `add_rows()` functions of the `dplyr` package.
 
-We also cover removing NA values with the `drop_na()` function of the `tidyr` package, separating one column into multiple columns using the `separate()` function of the `tidyr` pakcage, filling in `NA` values based on previous values using the `fill()` and  replacing `NA` values with the `replace_na()` function, both of the `tidyr` package, as well as arranging levels of factors using the  `forcats` pacakge. 
+We also cover removing NA values with the `drop_na()` function of the `tidyr` package, separating one column into multiple columns using the `separate()` function of the `tidyr` package, filling in `NA` values based on previous values using the `fill()` and  replacing `NA` values with the `replace_na()` function, both of the `tidyr` package, as well as arranging levels of factors using the  `forcats` package. 
 
 Finally, this case study also covers many of the `stringr` functions to manipulate character strings, including `str_extract()`, `str_to_title()`, `str_replace()`, `str_remove()`.
 
 
 #### Data Visualization
 
-We include an example of creating a plot to match the style of a plot in an existing report. We also demonstrate how to make effective bar plots, by demonstrating details such as creating gaps between groups, taking advantage of these gaps to move the legend to within the plot area, and to use horizontal lines to allow for additional comparisons among groups. We also demonstrate how to add images to plots and combine plots uising the `patchwork` package.
+We include an example of creating a plot to match the style of a plot in an existing report. We also demonstrate how to make effective bar plots, by demonstrating details such as creating gaps between groups, taking advantage of these gaps to move the legend to within the plot area, and to use horizontal lines to allow for additional comparisons among groups. We also demonstrate how to add images to plots and combine plots using the `patchwork` package.
 
 ### Analysis 
 
-The analaysis in this case study covers some basics about probablity and hypothesis testing, as well as the Mann-Kendall trend test and the difference between this test and simple linear regression. In this analysis we use the Mann-Kendall to test if there has been a trend within the disconnection rates of particular groups of youths over time.
+The analysis in this case study covers some basics about probability and hypothesis testing, as well as the Mann-Kendall trend test and the difference between this test and simple linear regression. In this analysis we use the Mann-Kendall to test if there has been a trend within the disconnection rates of particular groups of youths over time.
 
 
 ### Other notes and resources
@@ -203,7 +203,7 @@ Instructors can start at the Data Visualization or Data Analysis sections.
 
 #### Target audience 
 
-This case study is appropriate for those new to R programming and new to statistics. It is also appropriate for more advanced R users who are new to the Tidyverse. This particular case study may require some fundamental knowlege of statistics.
+This case study is appropriate for those new to R programming and new to statistics. It is also appropriate for more advanced R users who are new to the Tidyverse. This particular case study may require some fundamental knowledge of statistics.
 
 #### Suggested homework
 
